# Trabalho_DA

./: Assigner.cpp  Assigner.h  CMakeLists.txt  Conference.h  Control.h  CsvReader.cpp  CsvReader.h  Parameters.h  README.md  Reviewer.h  Submission.h  graph.cpp  graph.h  main.cpp
